# ore-kernel

./: .gitignore  LICENSE  NOTICE  README.md  ROADMAP.md
docs/: api-reference.md  architecture.md  cli-reference.md  getting-started.md  manifest-reference.md  security-model.md
docs/kernel-internals/: context-firewall.md  gpu-scheduler.md  hardware-abstraction-layer.md  ipc-and-semantic-bus.md  native-candle-engine.md  ssd-pager.md
examples/: kv_paging_stress_test.py  lazy_eviction_stress_test.py  ore_client.py
manifests/: openclaw.toml
ore-cli/: Cargo.toml
ore-cli/src/: cli.rs  interactive.rs  main.rs  utils.rs
ore-core/: Cargo.toml
ore-core/src/: driver.rs  firewall.rs  ipc.rs  lib.rs  registry.rs  scheduler.rs  swap.rs
ore-core/src/native/: engine.rs  kv_manager.rs  mod.rs
ore-core/src/native/models/: bert.rs  llama.rs  mod.rs  qwen2.rs
ore-server/: ore-kernel.token
ore-server/src/: main.rs  middleware.rs  payloads.rs
ore-server/src/handlers/: inference.rs  ipc.rs  system.rs
