[package]
name = "ore-cli"
version = "0.1.0"
edition = "2024"
description = "The CLI tool for the ORE AI Kernel."
license = "MIT OR Apache-2.0"
repository = "https://github.com/Mahavishnu-K/ore-kernel"
keywords = ["ai", "kernel", "llm", "local-ai", "cli"] 
categories = ["command-line-utilities", "science"]

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
colored = "3.1.1"
futures-util = "0.3.32"
hf-hub = { version = "0.5.0", features = ["tokio"] }
indicatif = "0.18.4"
inquire = "0.9.4"
reqwest = { version = "0.13.2", features = ["json", "rustls", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = ["full"] }
toml = "1.0.3"
