[package]
name = "ore-core"
version = "0.1.0"
edition = "2024"

[dependencies]
ore-common = { path = "../ore-common" }
tokio = { version = "1", features = ["full"] } # Async Runtime
tracing = "0.1" # Standard Logging
thiserror = "1.0" # Library Error Handling
anyhow = "1.0"
regex = "1.12.3"
toml = "1.0.3"
serde = { version = "1.0.228", features = ["derive", "rc"] }
async-trait = "0.1.89"
reqwest = { version = "0.13.2", features = ["json"] }
serde_json = "1.0.149"
uuid = { version = "1.21.0", features = ["v4"] }
dashmap = "6.1.0"
tokenizers = { version = "0.22.2", features = ["onig"] }
candle-core = "0.10.2"
candle-transformers = "0.10.2"
time = { version = "0.3.47", features = ["formatting", "macros", "local-offset"] }
candle-nn = "0.10.2"
memmap2 = "0.9.10"
bincode = "1.3.3"
cap-std = "4.0.2"
